adjust css fixed spacing

--- a/usgbv3/ui.apps/src/main/content/jcr_root/etc/designs/usgb_v3/clientlib/uiux-less/css/components/_megamenu.less
+++ b/usgbv3/ui.apps/src/main/content/jcr_root/etc/designs/usgb_v3/clientlib/uiux-less/css/components/_megamenu.less
@@ -116,7 +116,7 @@
       .mega-dropdown-menu-list{
         li{
           font-size:13px;
-          margin-bottom: 10px;
+          margin-bottom: 15px;
           &:after{
             display: none;
           }
@@ -143,7 +143,7 @@
       .mega-dropdown-menu-sidelist{
         li{
           font-size:13px;
-          margin-bottom: 5px;
+          margin-bottom: 15px;
           &:after{
             display: none;
           }
